correct header size, logo position, and page__content paddin on mobile view

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,3 +2,9 @@
   margin-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
+
+@media screen and (max-width: 620px) {
+  .header {
+    margin-top: 28px;
+  }
+}
