--- a/blocks/logo.css
+++ b/blocks/logo.css
@@ -16,5 +16,6 @@
     width: 126px;
     height: 24px;
     margin-left: 27px;
+    padding-bottom: 32px;
   }
 }
