--- a/blocks/page.css
+++ b/blocks/page.css
@@ -16,3 +16,9 @@
   position: relative;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 450px) {
+  .page__content {
+    padding: 0;
+  }
+}
